--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "json-loader": "^0.5.4",
         "ts-loader": "^2.2.2",
         "typescript": "^2.4.1",
+        "uglifyjs-webpack-plugin": "1.0.0-beta.1",
         "webpack": "^3.2.0"
+    },
+    "dependencies": {
+        "raw-loader": "^0.5.1"
     }
 }
