--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "license": "MIT",
     "scripts": {
         "build": "webpack",
-        "build:watch": "webpack --watch"
+        "build:watch": "webpack --watch",
+        "start": "electron ./app/main.js",
+        "serve:dev": "node server.js"
     },
     "devDependencies": {
+        "electron": "^2.0.9",
         "express": "^4.16.3",
         "json-loader": "^0.5.4",
+        "raw-loader": "^0.5.1",
         "ts-loader": "^2.2.2",
         "typescript": "^2.4.1",
         "uglifyjs-webpack-plugin": "1.0.0-beta.1",
         "webpack": "^3.2.0"
     },
-    "dependencies": {
-        "raw-loader": "^0.5.1"
-    }
+    "dependencies": {}
 }
