--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
-        "module": "ES6",
-        "target": "ES2017",
+        "module": "es6",
+        "target": "es6",
+        "lib": [ "dom", "es2015", "es2016", "es2017" ],
         "allowJs": true,
         "experimentalDecorators": true,
         "baseUrl": "",
         "paths": {
-            "ennj/*": [ "src/*" ]
+            "ennj/*": [ "./src/*" ]
         }
     },
     "compileOnSave": false
