--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.1"
+    "rxjs": "^7.8.1",
+    "systemjs": "^6.14.2",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@types/webgl2": "^0.0.5",
-    "copy-webpack-plugin": "^5.0.1",
-    "html-webpack-plugin": "^4.2.0",
-    "raw-loader": "^4.0.1",
-    "ts-loader": "^7.0.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.10.3"
+    "@types/systemjs": "^6.13.2",
+    "@types/webgl2": "^0.0.7",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.3",
+    "raw-loader": "^4.0.2",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
