--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "es6",
     "moduleResolution": "node",
-    "lib": ["es2018", "dom"],
+    "lib": ["esnext", "dom"],
     "strict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
